# sinksocket

./: .cproject  .gitignore  .md5sums  .project  .sinksocket.wavedev  COPYRIGHT  README.md  build.sh  rh.sinksocket.spec  sinksocket.prf.xml  sinksocket.scd.xml  sinksocket.spd.xml  sinksocket.spec
cpp/: .md5sums  BoostClient.h  BoostServer.cpp  BoostServer.h  InternalConnection.cpp  InternalConnection.h  InternalConnectionTemplate.h  Makefile.am  Makefile.am.ide  build.sh  configure.ac  main.cpp  quickstats.h  reconf  sinksocket.cpp  sinksocket.h  sinksocket_base.cpp  sinksocket_base.h  struct_props.h  vectorswap.h
tests/: .md5sums  NetworkSource.py  test_sinksocket.py
